# ProjectSynthdroid

./: .gitignore  .replit  replit.md  replit.nix
ProjectSynthdroid/: CMakeLists.txt
ProjectSynthdroid/Source/: JuceIncludes.h  Main.cpp  MainComponent.cpp  MainComponent.h  PluginProcessor.cpp  PluginProcessor.h
ProjectSynthdroid/Source/Audio/: BinaryData.h  PianoAcousticEngine.cpp  PianoAcousticEngine.h  SampleLoader.cpp  SampleLoader.h
ProjectSynthdroid/Source/FX/: Chorus.cpp  Chorus.h  Delay.cpp  Delay.h  Reverb.h
ProjectSynthdroid/Source/Piano/: PianoSampler.cpp  PianoSampler.h  PianoSound.cpp  PianoSound.h  PianoVoice.cpp  PianoVoice.h
ProjectSynthdroid/Source/Synth/: Envelope.cpp  Envelope.h  Filter.h  LFO.h  Oscillator.cpp  Oscillator.h  Sound.cpp  Sound.h  SynthEngine.cpp  SynthEngine.h  SynthParameters.h  Voice.h
ProjectSynthdroid/Source/UI/: KeyComponent.cpp  KeyComponent.h  LookAndFeel.cpp  LookAndFeel.h  MainView.cpp  MainView.h  PianoKeyboard.cpp  PianoKeyboard.h  SliderBank.cpp  SliderBank.h  SynthUI.cpp  SynthUI.h
attached_assets/: Pasted--Replit-Prompt-Professional-90s-Style-Digital-Synth-Sta_1776519046456.txt
jd800-inspired-synth/: CMakeLists.txt
jd800-inspired-synth/Source/: Main.cpp  MainComponent.cpp  MainComponent.h  PluginProcessor.h
jd800-inspired-synth/Source/FX/: Chorus.h  Reverb.cpp
jd800-inspired-synth/Source/Synth/: Envelope.h  Filter.cpp  LFO.cpp  SynthEngine.cpp  SynthEngine.h  Voice.cpp  Voice.h
jd800-inspired-synth/Source/UI/: SliderBank.cpp  SliderBank.h  SynthUI.h
